Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110247

macOS: The macOS style falls back to the Basic style rather than the Fusion style

XMLWordPrintable

    • 47e111800 (dev), aa7f0b973 (dev), c62113f7b (6.5)

      The macOS style is built with the following CMake options (
      qtdeclarative/src/quickcontrols/macOS/CMakeLists.txt):
       

      qt_internal_add_qml_module(qtquickcontrols2macosstyleplugin
         IMPORTS QtQuick.Controls.Fusion/auto

      Still, the macOS style will not use any controls from the Fusion style, but instead pick controls from the Basic style. This is a regression from Qt 6.4

        1. 6.3.1-output.txt
          18 kB
          Mitch Curtis
        2. dev-output.txt
          13 kB
          Mitch Curtis
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            richard Richard Moe Gustavsen
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes