Controls: Fix module imports of fallback styles

If you specify an explicit fallback, it should take precedence over
any implicit fallback the style might specify. If you don't, the
implicit fallback should take precedence.

If, however, the main style is a custom one, we cannot indirectly import
QtQuick.Controls.Basic through it as the versions may not match. For
that case, add a QtQuick.Controls.IndirectBasic module that does nothing
but import QtQuick.Controls.Basic.

Also, add a test that checks whether the expected fallback was imported
and fix some mistaken test data along the way.

In Qt 6.4 and earlier you could not override the implicit fallback since
the precedence between imports was wrong. After that was fixed in commit
a0290dcc53a14b67c0179c43ce8dc21b43cfc83b the fallback style set from
QtQuick.Controls ("Basic" if not requested explicitly) would always
override the implicit fallback style.

Both behaviors are equally wrong. We need to actually check whether the
fallback is explicitly set or not.

Pick-to: 6.5
Fixes: QTBUG-110247
Change-Id: I1aeee05c1c720bebf8b1b55361fd035a5565fb1b
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>