tests/auto/quickcontrols/styleimports/data/styles/StyleThatImportsFusion/Action.qml
@@ -1,0 +1,4 @@
+import QtQuick.Templates as T
+T.Action {
+   objectName: "StyleThatImportsFusion"
+}
